# llmux

./: .gitignore  AI-AGENTS.md  Cargo.toml  Makefile  README.md  shell.nix
.arf/specs/: roadmap.arf
.arf/specs/01-config_and_types/: 01-error_types.arf  02-backend_config.arf  03-role_team_config.arf  04-workflow_config.arf  05-config_loader.arf  spec.arf
.arf/specs/02-template_engine/: 01-context.arf  02-engine.arf  03-filters.arf  04-conditionals.arf  05-errors.arf  spec.arf
.arf/specs/03-backend_executor/: 01-types.arf  02-cli_backend.arf  03-http_backend.arf  04-retry.arf  05-output_parser.arf  spec.arf
.arf/specs/04-role_and_team_resolver/: 01-team_detector.arf  02-role_resolver.arf  03-execution_mode.arf  04-role_executor.arf  05-mod.arf  spec.arf
.arf/specs/05-workflow_engine/: 01-types.arf  02-loader.arf  03-dag.arf  04-executor.arf  05-runner.arf  spec.arf
.arf/specs/06-apply_and_verify/: 01-edit_parser.arf  02-diff_applier.arf  03-rollback.arf  04-verification.arf  05-retry_loop.arf  spec.arf
.arf/specs/07-cli_and_output/: 01-cli_parser.arf  02-output_handler.arf  03-commands.arf  04-signals.arf  spec.arf
.llm-mux/: config.toml
docs/: ARCHITECTURE.md  SAFETY-AUDIT.md
examples/workflows/: discover-ecosystem.toml  discover-entities.toml  investigate-5xx-alert.toml  perf-analysis.toml
src/: discovery.rs  logging.rs  main.rs  process.rs
src/apply_and_verify/: diff_applier.rs  edit_parser.rs  mod.rs  retry_loop.rs  rollback.rs  verification.rs
src/backend_executor/: claude_backend.rs  cli_backend.rs  http_backend.rs  mod.rs  output_parser.rs  retry.rs  types.rs
src/cli/: commands.rs  mod.rs  output.rs  signals.rs
src/config/: backend.rs  ecosystem.rs  error.rs  loader.rs  mod.rs  role.rs  workflow.rs
src/memory/: mod.rs  schema.rs  store.rs
src/role/: mod.rs  role_executor.rs  role_resolver.rs  team_detector.rs
src/template/: conditionals.rs  context.rs  engine.rs  errors.rs  filters.rs  mod.rs
src/workflow/: ecosystem_detector.rs  executor.rs  mod.rs  runner.rs  state.rs
