[package]
name = "llm-mux"
version = "20260211.0.0"
edition = "2024"
description = "Multiplexer for LLMs - route prompts to multiple backends"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Templating
minijinja = { version = "2.0", features = ["loader"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Random (for retry jitter)
rand = "0.9"

# Async traits
async-trait = "0.1"

# Regex for diff parsing
regex = "1.10"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"

[dev-dependencies]
tempfile = "3.0"
